# rustig

./: Cargo.toml
lib/callgraph/: Cargo.toml
lib/callgraph/src/: crate_utils.rs  dwarf_utils.rs  errors.rs  lib.rs  parse.rs
lib/callgraph/src/binary_read/: mod.rs
lib/callgraph/src/callgraph/: lea_dynamic_calls.rs  mod.rs  static_calls.rs  x86_cg_builder.rs
lib/callgraph/src/parse/: mod.rs
lib/panic_analysis/: Cargo.toml
lib/panic_analysis/src/: errors.rs  lib.rs  test_utils.rs
lib/panic_analysis/src/binary/: mod.rs
lib/panic_analysis/src/filter/: mod.rs  panic_filter.rs  whitelist_filter.rs
lib/panic_analysis/src/graph_output/: mod.rs
lib/panic_analysis/src/marker/: analysis_target.rs  entry_point.rs  function_whitelist.rs  mod.rs  panic.rs
lib/panic_analysis/src/panic_calls/: mod.rs  panic_message.rs
lib/panic_analysis/src/patterns/: direct_panic.rs  function_panic.rs  message_panic.rs  mod.rs
lib/panic_analysis/tests/: function_whitelist.rs  libcalls.rs  panic_message.rs  recognize-arithmetic.rs  recognize_direct.rs  recognize_indexing.rs  recognize_unwrap.rs
lib/test_common/: Cargo.toml  build.rs
lib/test_common/src/: lib.rs
src/: cmd_args.rs  config_file.rs  errors.rs  main.rs  output.rs
test_subjects/: Cargo.toml  README.md
test_subjects/arithmetic/: Cargo.toml
test_subjects/binary_search/: Cargo.toml
test_subjects/capturing_closure_invocation/: Cargo.toml
test_subjects/capturing_closure_invocation/src/: main.rs
test_subjects/dep/: Cargo.toml
test_subjects/dep/src/: lib.rs
test_subjects/direct/: Cargo.toml
test_subjects/empty/: Cargo.toml
test_subjects/hello_world/: Cargo.toml
test_subjects/indexing/: Cargo.toml
test_subjects/indirect/: Cargo.toml
test_subjects/lib_calls/: Cargo.toml
test_subjects/multi_dep/: Cargo.toml
test_subjects/multi_dep/src/: main.rs
test_subjects/trait_invocation/: Cargo.toml
test_subjects/trait_invocation/src/: main.rs
test_subjects/unwrap/: Cargo.toml
test_subjects_lib/: Cargo.toml
test_subjects_lib/src/: box_traits.rs  impl_traits.rs  lambda_structs.rs  panic_types.rs  reference_calls.rs  same_vtable.rs  trait_dynamic_calls.rs  trait_similar_names.rs  trait_simple_calls.rs
test_subjects_stable_rustc/: Cargo.toml
