[workspace]
members = [
	"lib/callgraph",     
	"lib/panic_analysis",     
	"lib/test_common",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = [
    "Bart van Schaick <bvschaick@gmail.com>",
    "Dominique van Cuilenborg <d.vancuilenborg@hotmail.com>",
    "Fabian Stelmach <fabianstelmach@gmail.com>",
    "Aron Zwaan <aronzwaan@gmail.com>",
    "Erwin Gribnau <erwin.gribnau@technolution.nl>"
]
homepage = "https://github.com/Technolution/rustig"
repository = "https://github.com/Technolution/rustig"
documentation = "https://github.com/Technolution/rustig"
license = "MIT OR Apache-2.0"

[package]
name = "rustig"
description = "A tool to detect code paths leading to Rust's panic handler"
keywords = ["cli", "compilation", "proof"]
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = "2.31.2"
callgraph = { path = "lib/callgraph" }
panic_analysis = { path = "lib/panic_analysis" }
toml = "0.4.6"
serde = "1.0.219"
serde_derive = "1.0.219"
error-chain = "0.12.4"
serde_json = "1.0.143"

[dev-dependencies]
assert_cli = "0.5"
test_common = { path = "lib/test_common" }
