[workspace]
members = [
    "hello_world",
    "empty",
    "unwrap",
    "binary_search",
    "lib_calls",
    "trait_invocation",
    "capturing_closure_invocation",
    "multi_dep",
    "dep",
    "indexing",
    "direct",
    "indirect",
    "arithmetic",
]
resolver = "3"

[workspace.package]
edition = "2024"
readme = "README.md"

[profile.release]
debug = true
