[package]
name = "callgraph"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
addr2line = "0.6.0"
petgraph = "0.8.2"
object = "0.7.0"
goblin = "0.0.13"
gimli = "0.15.0"
capstone = { git = "https://github.com/capstone-rust/capstone-rs.git", rev = "dc10578aa27414afc93f0a87959b2f0c22dc66c3" }
elf = "0.0.10"
error-chain = "0.12.4"
fallible-iterator = "0.1.2"
byteorder = "1.2.3"

[dev-dependencies]
test_common = { path = "../../lib/test_common" }

