[package]
name = "test_common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
gimli = "0.15.0"
object = "0.7.0"
elf = "0.0.10"
capstone = { git = "https://github.com/capstone-rust/capstone-rs.git", rev = "dc10578aa27414afc93f0a87959b2f0c22dc66c3" }
